# ndpsc-case-search-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  fastmcp.json  justfile  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml
src/ndpsc_case_search_mcp/: server.py
src/ndpsc_case_search_mcp/models/: case.py
src/ndpsc_case_search_mcp/services/: scraper.py
src/ndpsc_case_search_mcp/tools/: __init__.py  cases.py  documents.py
